--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- Styles -->
+    <link rel="stylesheet" href="css/modern-theme.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/additional-styles.css">
     <link rel="stylesheet" href="css/group-styles.css">
@@ -396,6 +397,10 @@
         </div>
     </div>
 
+    <!-- Background Orbs -->
+    <div class="bg-orb bg-orb-1"></div>
+    <div class="bg-orb bg-orb-2"></div>
+
     <!-- Scripts -->
     <script src="js/config.js"></script>
     <script src="js/api.js"></script>
@@ -403,5 +408,6 @@
     <script src="js/webrtc.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app-main.js"></script>
+    <script src="js/modern-effects.js"></script>
 </body>
 </html>
