--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="css/modern-theme.css">
+    <link rel="stylesheet" href="css/modern-buttons.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/additional-styles.css">
     <link rel="stylesheet" href="css/group-styles.css">
