Added professional animated backgrounds: grid patterns, light rays, geometric shapes, scanlines, and holographic effects

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/modern-theme.css">
     <link rel="stylesheet" href="css/modern-buttons.css">
+    <link rel="stylesheet" href="css/animated-backgrounds.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/additional-styles.css">
     <link rel="stylesheet" href="css/group-styles.css">
@@ -397,6 +398,22 @@
             <button id="create-group-confirm-btn" class="primary-btn">Create Group</button>
         </div>
     </div>
+
+    <!-- Animated Background Elements -->
+    <div class="scanline"></div>
+    
+    <div class="light-rays">
+        <div class="light-ray"></div>
+        <div class="light-ray"></div>
+        <div class="light-ray"></div>
+        <div class="light-ray"></div>
+        <div class="light-ray"></div>
+        <div class="light-ray"></div>
+    </div>
+
+    <div class="geometric-shape circle" style="top: 10%; left: 15%;"></div>
+    <div class="geometric-shape square" style="top: 60%; right: 20%;"></div>
+    <div class="geometric-shape triangle" style="bottom: 15%; left: 25%;"></div>
 
     <!-- Background Orbs -->
     <div class="bg-orb bg-orb-1"></div>
