Added custom background image with dark overlay and animated effects

--- a/public/index.html
+++ b/public/index.html
@@ -400,6 +400,8 @@
     </div>
 
     <!-- Animated Background Elements -->
+    <div class="animated-grid"></div>
+    <div class="gradient-overlay"></div>
     <div class="scanline"></div>
     
     <div class="light-rays">
