--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/modern-theme.css">
     <link rel="stylesheet" href="css/modern-buttons.css">
     <link rel="stylesheet" href="css/animated-backgrounds.css">
+    <link rel="stylesheet" href="css/auth-styles.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/additional-styles.css">
     <link rel="stylesheet" href="css/group-styles.css">
