Fixed: Removed emoji from logo, improved video call remote stream handling

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <div id="auth-screen" class="auth-screen active">
         <div class="auth-container">
             <div class="auth-header">
-                <h1 class="auth-logo">🎮 ConnectHub</h1>
+                <h1 class="auth-logo">ConnectHub</h1>
                 <p class="auth-tagline">Connect with friends through video, voice, and chat</p>
             </div>
 
