FIXED GROUPS: Groups now display in sidebar after creation - added renderGroups function and groups UI

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,20 @@
                         </svg>
                         <span>Add Friend</span>
                     </div>
+                    
+                    <!-- Groups Section -->
+                    <div class="channel-category" style="margin-top: 20px;">
+                        <span>GROUPS</span>
+                        <button id="create-group-btn" class="icon-btn" title="Create Group" style="margin-left: auto;">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 16px; height: 16px;">
+                                <line x1="12" y1="5" x2="12" y2="19"></line>
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                        </button>
+                    </div>
+                    <div id="groups-list">
+                        <!-- Groups will appear here -->
+                    </div>
                 </div>
                 
                 <!-- Server Channels -->
